# replace-benchmark

./: .gitignore  LICENSE  Makefile  README.md  cabal.project  default.nix  flake.nix  make-stdout  make-stdout2  profile.sh  replace-benchmark.cabal  replace-perl.pl  replace-python-fn.py  replace-python.py  run.sh
src/: AttoparsecByteString.hs  AttoparsecText.hs  AttoparsecTextLazy.hs  BenchUnitAttoparsec.hs  DataTextReplace.hs  LensRegexByteString.hs  LensRegexText.hs  MegaparsecByteString.hs  MegaparsecString.hs  MegaparsecText.hs  PcreHeavyText.hs  RegexApplicativeString.hs  StringSearchByteString.hs
