name:                replace-benchmark
version:             1.0.0.0
cabal-version:       1.18
synopsis:            Benchmarks for replace-megaparsec and replace-attoparsec
homepage:            https://github.com/jamesdbrock/replace-benchmark
bug-reports:         https://github.com/jamesdbrock/replace-benchmark/issues
license:             BSD2
license-file:        LICENSE
author:              James Brock <jamesbrock@gmail.com>
maintainer:          James Brock <jamesbrock@gmail.com>
build-type:          Simple
category:            Parsing

extra-doc-files:     README.md

source-repository head
  type:               git
  location:           https://github.com/jamesdbrock/replace-benchmark.git


executable megaparsec-string
  main-is:             MegaparsecString.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.0 && < 5.0
                     , megaparsec
                     , replace-megaparsec
  ghc-options:         -O2 -Wall

executable megaparsec-text
  main-is:             MegaparsecText.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.0 && < 5.0
                     , megaparsec
                     , replace-megaparsec
                     , text
  ghc-options:         -O2 -Wall

executable megaparsec-bytestring
  main-is:             MegaparsecByteString.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.0 && < 5.0
                     , megaparsec
                     , replace-megaparsec
                     , bytestring
  ghc-options:         -O2 -Wall

executable attoparsec-bytestring
  main-is:             AttoparsecByteString.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.0 && < 5.0
                     , attoparsec
                     , replace-attoparsec
                     , bytestring
  ghc-options:         -O2 -Wall

executable attoparsec-text
  main-is:             AttoparsecText.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.0 && < 5.0
                     , attoparsec
                     , replace-attoparsec
                     , text
  ghc-options:         -O2 -Wall

executable attoparsec-text-lazy
  main-is:             AttoparsecTextLazy.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.0 && < 5.0
                     , attoparsec
                     , replace-attoparsec
                     , text
  ghc-options:         -O2 -Wall

executable regex-applicative-string
  main-is:             RegexApplicativeString.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.0 && < 5.0
                     , regex-applicative
  ghc-options:         -O2 -Wall

executable stringsearch-bytestring
  main-is:             StringSearchByteString.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.0 && < 5.0
                     , stringsearch
                     , bytestring
  ghc-options:         -O2 -Wall

executable pcre-heavy-text
  main-is:             PcreHeavyText.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.0 && < 5.0
                     , pcre-heavy
                     , text
  ghc-options:         -O2 -Wall

executable lens-regex-text
  main-is:             LensRegexText.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.0 && < 5.0
                     , lens-regex-pcre >= 1.1.0.0
                     , text
                     , lens
  ghc-options:         -O2 -Wall

executable lens-regex-bytestring
  main-is:             LensRegexByteString.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.0 && < 5.0
                     , lens-regex-pcre >= 1.1.0.0
                     , bytestring
                     , lens
  ghc-options:         -O2 -Wall

executable data-text-replace
  main-is:             DataTextReplace.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.0 && < 5.0
                     , text
  ghc-options:         -O2 -Wall

benchmark bench-unit-megaparsec
  main-is:             BenchUnitMegaparsec.hs
  hs-source-dirs:      src
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >= 4.0 && < 5.0
                     , megaparsec
                     , replace-megaparsec
                     , text
                     , bytestring
                     , criterion
  ghc-options:         -O2 -Wall

benchmark bench-unit-attoparsec
  main-is:             BenchUnitAttoparsec.hs
  hs-source-dirs:      src
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base >= 4.0 && < 5.0
                     , attoparsec
                     , replace-attoparsec
                     , text
                     , bytestring
                     , criterion
  ghc-options:         -O2 -Wall

